--- a/styles/style.css
+++ b/styles/style.css
@@ -36,34 +36,34 @@ main {
     position: relative;
 }
 
-#conference {
+.conference {
     grid-area: 1/1/2/2;
-    background-color: rgb(191, 15, 185);
+    background-color: rgba(255,68,68,0.4);
 }
 
-#reception {
+.reception {
     grid-area: 2/1/4/2;
-    background-color: green;
+    background-color: rgba(255,68,68,0.4);
 }
 
-#server {
+.server {
     grid-area: 1/3/2/4;
-    background-color: rgb(45, 20, 184);
+    background-color: rgba(255,68,68,0.4);
 }
 
-#security {
+.security {
     grid-area: 1/4/2/5;
-    background-color: #FF9800;
+    background-color: rgba(255,68,68,0.4);
 }
 
-#staff {
+.staff {
     grid-area: 3/4/4/5;
-    background-color: #4CAF50;
+    background-color: rgba(255,68,68,0.4);
 }
 
-#archives {
+.archives {
     grid-area: 3/3/4/4;
-    background-color: #ff4444;
+    background-color: rgba(255,68,68,0.4);
 }
 
 .container {
@@ -111,7 +111,8 @@ aside {
 }
 
 .employeeZone {
-    background-color: #4457ff;
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
     height: 100%;
     width: 100%;
     overflow-y: scroll;
